BUGFIX: Add spacing between blog contents
Same as in semantic sections

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_Post.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_Post.scss
@@ -1,6 +1,12 @@
 .postBody {
-	max-width: $layout-small-width;
-	margin: 0 auto;
+  max-width: $layout-small-width;
+  margin: 0 auto;
+
+  > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1.625em;
+  }
 }
 
 .post__footer {
